# swipeType

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.json  vercel.json
apps/mac/: project.yml
apps/mac/Sources/SwipeTypeMac/App/: AppDelegate.swift  AppSettings.swift  AppState.swift
apps/mac/Sources/SwipeTypeMac/Services/: TextInsertionService.swift
apps/mac/Sources/SwipeTypeMac/Views/: ContentView.swift  OverlayPanel.swift
apps/mac/Support/: SwipeTypeMac.entitlements
apps/web/www/: index.html
crates/super-swipe-engine/: Cargo.toml  README.md  build.rs
crates/super-swipe-engine/src/: keyboard.rs  lib.rs
crates/swipe-engine/: Cargo.toml  README.md  build.rs
crates/swipe-engine/src/: dtw.rs  ffi.rs  keyboard.rs  lib.rs  wasm.rs
crates/swipe-types/: Cargo.toml  README.md
crates/swipe-types/src/: types.rs
scripts/: release.sh
src/: index.html  lib.rs  main.rs
