[workspace]
resolver = "2"
members = [
    "crates/super-swipe-engine",
    "crates/swipe-types",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Zimeng Xiong", "Diamond White"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
