[package]
name = "super-swipe-engine"
version = "0.1.10"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "A fast swipe typing prediction engine using Dynamic Time Warping (DTW)"
repository = "https://github.com/oneshinyboi/swipeType"
homepage = "https://github.com/oneshinyboi/swipeType"
readme = "../../README.md"
keywords = ["swipe", "typing", "prediction", "dtw", "keyboard"]
categories = ["algorithms", "text-processing"]
exclude = ["lang-data/*"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["use-pair-counts"]
use-corpus = []
use-pair-counts = ["use-corpus"]
use-word-frequency-files = []

[dependencies]
swipe-types = "0.1.5"
bincode = "2.0.1"
codes-iso-639 = "0.1.5"

[build-dependencies]
swipe-types = "0.1.5"
bincode = "2.0.1"
codes-iso-639 = "0.1.5"
