[package]
name = "swipe-engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "A fast swipe typing prediction engine using Dynamic Time Warping (DTW)"
repository = "https://github.com/ZimengXiong/swipeType"
readme = "README.md"
keywords = ["swipe", "typing", "prediction", "dtw", "keyboard"]
categories = ["algorithms", "text-processing"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = []
wasm = ["wasm-bindgen"]
ffi = ["once_cell"]
skip-corpus = []

[dependencies]
swipe-types = {path = "../swipe-types"}
serde_json = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
once_cell = { version = "1.19", optional = true }

[build-dependencies]
swipe-types = {path = "../swipe-types"}
bincode = "2.0.1"

