[package]
name = "swipe-engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "A fast swipe typing prediction engine using Dynamic Time Warping (DTW)"
repository = "https://github.com/oneshinyboi/swipeType"
homepage = "https://github.com/oneshinyboi/swipeType"
readme = "README.md"
keywords = ["swipe", "typing", "prediction", "dtw", "keyboard"]
categories = ["algorithms", "text-processing"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = []
wasm = ["wasm-bindgen"]
ffi = ["once_cell"]
force-corpus = []
use-pair-counts = ["force-corpus"]

[dependencies]
swipe-types = {path = "../swipe-types"}
serde_json = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
once_cell = { version = "1.19", optional = true }
bincode = "2.0.1"
codes-iso-639 = "0.1.5"

[build-dependencies]
swipe-types = {path = "../swipe-types"}
bincode = "2.0.1"
codes-iso-639 = "0.1.5"
